--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,6 +4,10 @@
   font-family : "Outfit", "sans-serif";
 }
 
+body {
+  background: linear-gradient(to bottom, #000000, #111827, #000000);
+  min-height: 100vh;
+}
 
 @layer base {
   button {
